--- a/app/src/main/res/layout/activity_voiturelocation_details.xml
+++ b/app/src/main/res/layout/activity_voiturelocation_details.xml
@@ -198,9 +198,9 @@
             android:orientation="horizontal">
 
             <TextView
-                android:layout_width="140dp"
+                android:layout_width="55dp"
                 android:layout_height="wrap_content"
-                android:text="boite de vitesse :"
+                android:text="boite :"
                 android:textColor="@color/white"
                 android:id="@+id/boiteVitesse_details_text_view_details_txt"
                 android:textSize="18sp"
@@ -224,9 +224,9 @@
             android:orientation="horizontal">
 
             <TextView
-                android:layout_width="120dp"
+                android:layout_width="45dp"
                 android:layout_height="wrap_content"
-                android:text="prix journalier :"
+                android:text="prix :"
                 android:textColor="@color/white"
                 android:id="@+id/prixJournalier_details_txt"
                 android:textSize="18sp"
