--- a/app/src/main/res/layout/activity_list_location.xml
+++ b/app/src/main/res/layout/activity_list_location.xml
@@ -22,7 +22,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/page_title"
-                android:text="Location disponible"
+                android:text="Location Voiture"
                 android:layout_centerInParent="true"
                 android:textColor="@color/white"
                 android:textSize="26dp"
