--- a/app/src/main/res/layout/activity_reservation.xml
+++ b/app/src/main/res/layout/activity_reservation.xml
@@ -8,6 +8,7 @@
     android:padding="16dp"
     tools:context=".ListLocationActivity">
 
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -38,121 +39,167 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/title_bar_layout"
-        android:id="@+id/form_login"
+        android:id="@+id/form_reservation"
         android:layout_marginVertical="32dp"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/marque_model_version_text_view"
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/rounded_corner"
-            android:backgroundTint="@color/color_button"
-            android:gravity="center"
-            android:text="CITROEN C3 "
-            android:textColor="@color/white"
-            android:textSize="17sp"
-            android:textStyle="bold" />
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/txtDateRes"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Date début de réservation :"
-            android:textColor="@color/white"
-            android:layout_marginTop="8dp"
-            android:textSize="17dp"/>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginVertical="8dp"
-            android:background="@drawable/rounded_corner"
-            android:backgroundTint="@color/color_button"
-            android:id="@+id/date_debut_text_view"
-            android:hint="Date début"
-            android:padding="12dp"
-            android:textColor="@color/black"
-            android:textSize="20sp">
-
-        </TextView>
-
-        <TextView
-            android:id="@+id/txtDateFin"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Date de fin de réservation :"
-            android:textColor="@color/white"
-            android:layout_marginTop="8dp"
-            android:textSize="17dp"/>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginVertical="8dp"
-            android:background="@drawable/rounded_corner"
-            android:backgroundTint="@color/color_button"
-            android:id="@+id/date_fin_text_view"
-            android:hint="date fin"
-            android:padding="12dp"
-            android:textColor="@color/black"
-            android:textSize="20sp"/>
-
-        <TextView
-            android:id="@+id/txtCout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Coût de la réservation :"
-            android:textColor="@color/white"
-            android:layout_marginTop="8dp"
-            android:textSize="17dp"/>
-
-        <TextView
-            android:id="@+id/cout_text_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginVertical="8dp"
-            android:background="@drawable/rounded_corner"
-            android:backgroundTint="@color/color_button"
-            android:hint="Séléctionner une date "
-            android:padding="12dp"
-            android:textColor="@color/black"
-            android:textSize="20sp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
 
-        <com.google.android.material.button.MaterialButton
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Valider"
-            android:id="@+id/valider_btn"
-            android:layout_marginVertical="8dp"
-            android:backgroundTint="@color/color_button"
-            android:padding="12dp"
-            android:textColor="@color/white"
-            android:textSize="15sp">
+                <TextView
+                    android:id="@+id/marque_model_version_text_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/rounded_corner"
+                    android:backgroundTint="@color/color_button"
+                    android:gravity="center"
+                    android:text="CITROEN C3 "
+                    android:textColor="@color/white"
+                    android:textSize="17sp"
+                    android:textStyle="bold" />
 
-        </com.google.android.material.button.MaterialButton>
+                <TextView
+                    android:id="@+id/txtDateRes"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Date début de réservation :"
+                    android:textColor="@color/white"
+                    android:layout_marginTop="8dp"
+                    android:textSize="17dp"/>
 
-        <TextView
-            android:id="@+id/prix_journalier_text_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginVertical="8dp"
-            android:background="@drawable/rounded_corner"
-            android:backgroundTint="@color/color_button"
-            android:hint="coût journalier "
-            android:padding="12dp"
-            android:textColor="@color/black"
-            android:textSize="20sp" />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginVertical="8dp"
+                    android:background="@drawable/rounded_corner"
+                    android:backgroundTint="@color/color_button"
+                    android:id="@+id/date_debut_text_view"
+                    android:hint="Date début"
+                    android:padding="12dp"
+                    android:textColor="@color/black"
+                    android:textSize="20sp">
 
-        <ProgressBar
-            android:layout_width="24dp"
-            android:layout_height="64dp"
-            android:id="@+id/progress_bar"
-            android:layout_gravity="center"
-            android:visibility="gone"
-            android:layout_marginTop="12dp"/>
+                </TextView>
+
+                <TextView
+                    android:id="@+id/txtDateFin"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Date de fin de réservation :"
+                    android:textColor="@color/white"
+                    android:layout_marginTop="8dp"
+                    android:textSize="17dp"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginVertical="8dp"
+                    android:background="@drawable/rounded_corner"
+                    android:backgroundTint="@color/color_button"
+                    android:id="@+id/date_fin_text_view"
+                    android:hint="date fin"
+                    android:padding="12dp"
+                    android:textColor="@color/black"
+                    android:textSize="20sp"/>
+
+                <TextView
+                    android:id="@+id/test_view_prix_journalier"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Prix journalier de la location :"
+                    android:textColor="@color/white"
+                    android:layout_marginTop="8dp"
+                    android:textSize="17dp"/>
+
+                <TextView
+                    android:id="@+id/prix_journalier_text_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginVertical="8dp"
+                    android:background="@drawable/rounded_corner"
+                    android:backgroundTint="@color/color_button"
+                    android:hint="coût journalier "
+                    android:padding="12dp"
+                    android:textColor="@color/black"
+                    android:textSize="20sp" />
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/form_login"
+                    android:id="@+id/linear_layout"
+                    android:layout_marginVertical="3dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/txtCout"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Coût de la réservation :"
+                        android:textColor="@color/white"
+                        android:layout_marginTop="8dp"
+                        android:textSize="17dp"/>
+
+                    <Button
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Voir le coût total"
+                        android:id="@+id/voir_prix"
+                        android:layout_marginVertical="8dp"
+                        android:layout_marginHorizontal="8dp"
+                        android:background="@drawable/rounded_corner"
+                        android:backgroundTint="@color/color_button"
+                        android:padding="12dp"
+                        android:textColor="@color/white"
+                        android:textSize="13sp">
+
+                    </Button>
+                </LinearLayout>
+
+                    <TextView
+                        android:id="@+id/cout_text_view"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginVertical="8dp"
+                        android:background="@drawable/rounded_corner"
+                        android:backgroundTint="@color/color_button"
+                        android:hint="Veuillez cliquer sur voir le coût total"
+                        android:padding="12dp"
+                        android:textColor="@color/black"
+                        android:textSize="18sp" />
+
+
+                <com.google.android.material.button.MaterialButton
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Valider"
+                    android:id="@+id/valider_btn"
+                    android:layout_marginVertical="8dp"
+                    android:backgroundTint="@color/color_button"
+                    android:padding="12dp"
+                    android:textColor="@color/white"
+                    android:textSize="15sp">
+
+                </com.google.android.material.button.MaterialButton>
+
+
+                <ProgressBar
+                    android:layout_width="24dp"
+                    android:layout_height="64dp"
+                    android:id="@+id/progress_bar"
+                    android:layout_gravity="center"
+                    android:visibility="gone"
+                    android:layout_marginTop="12dp"/>
+            </LinearLayout>
+        </ScrollView>
     </LinearLayout>
-
 
 </RelativeLayout>
